# dg_sdk_ros2_bridge

./: README.md
.github/workflows/: ci.yml
dg_msgs/: CMakeLists.txt  package.xml
dg_msgs/msg/: DiagnosisSystem.msg  GripperSetting.msg  GripperSystemSetting.msg  ReceivedFingertipSensorData.msg  ReceivedGPIOData.msg  ReceivedGripperData.msg  RecipeBlendData.msg  RecipeGainData.msg  RecipeGraspData.msg  RecipePoseData.msg
dg_msgs/srv/: AddMoveBlendJoint.srv  BackupRecipeData.srv  ClearMoveBlendJoint.srv  ConnectToGripper.srv  DisconnectToGripper.srv  EEPROMWrite.srv  GetCommunicationPeriod.srv  GetCurrentTcpPose.srv  GetDataProcessing.srv  GetDiagnosisSystem.srv  GetReceivedFingertipSensorData.srv  GetReceivedGPIOData.srv  GetReceivedGripperData.srv  InHandManipulation.srv  LoadRecipeGainData.srv  LoadRecipeGraspData.srv  LoadRecipePoseData.srv  ManualTeachMode.srv  MoveJoint.srv  MoveJointAll.srv  MoveJointFinger.srv  MoveServoJoint.srv  MoveTCPAll.srv  MoveTCPFinger.srv  RestoreRecipeData.srv  SetBootMode.srv  SetBootRecipe.srv  SetControlPIDMode.srv  SetCurrentControlMode.srv  SetFingerTipDataZero.srv  SetGPIOOutput.srv  SetGPIOOutputAll.srv  SetGraspData.srv  SetGraspForce.srv  SetGripperOption.srv  SetGripperSystem.srv  SetIp.srv  SetJointGainD.srv  SetJointGainDAll.srv  SetJointGainDFinger.srv  (+46 more)
dg_sdk_ros2_bridge/: CMakeLists.txt  README.md  package.xml
dg_sdk_ros2_bridge/example/: dg3fb.py  dg3fm.py  dg5fl.py
dg_sdk_ros2_bridge/include/: DGDataTypes.h  DGSDK.h  dg_bridge_includes.hpp
dg_sdk_ros2_bridge/src/: dg_sdk_ros2_bridge_node.cpp
